k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: ClusterIP
  selector: { app: myapp }
  ports:
    - port: 80
      targetPort: 8080
